src/objects/npsp__Levels_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>npsp__LastJobStartTimeAccount__c</fullName>
        <description>The last time the Level assignment batch job ran successfully for the Account object</description>
        <label>Last Job Start Time : Account</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__LastJobStartTimeContact__c</fullName>
        <description>The last time the Level assignment batch job ran successfully for the Contact object</description>
        <label>Last Job Start Time : Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Level_Assignment_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used by the Levels Assignment engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating levels.</inlineHelpText>
        <label>Level Assignment Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Levels Settings</label>
</CustomObject>